correct logo added/dark mode fixed for good

--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@ body{
     position: relative;
     width: 100%;
 }
+.logo{
+    border-radius: 10px;
+}
 
 .main-nav{
     display: flex;
@@ -52,6 +55,19 @@ body{
 }
 .main-nav ul li a:hover{
     color: orangered;
+}
+.fa-sun{
+    font-size: 16px;
+    color: var(--secondary-color);
+    cursor: pointer;
+    padding-left: 6px;
+}
+.fa-moon{
+    font-size: 16px;
+    color: var(--secondary-color);
+    cursor: pointer;
+    padding-left: 6px;
+
 }
 .icon{
     color: var(--secondary-color);
